CHANGES CHANGE THE LIFE
Signed-off-by: Matheus Castello <matheus.castello@toradex.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
   "torizon_debug_port2": "",
   "torizon_debug_port3": "",
   "torizon_gpu": "",
-  "torizon_arch": "arm64",
+  "torizon_arch": "aarch64",
   "wait_sync": "1",
   "torizon_run_as": "torizon",
   "torizon_app_root": "/home/torizon",
@@ -19,7 +19,7 @@
   "torizon.gpuPrefixRC": true,
   "terminal.integrated.defaultProfile.linux": "bash",
   "tcb.fleetName": "test",
-  "docker_registry": "",
+  "docker_registry": "registry-1.docker.io",
   "docker_login": "matheuscastello",
   "docker_password": "secret",
   "docker_tag": "test",
